Still not that smooth Shawarma